<resources>
    <string name="app_name">Court Counter</string>
    <string name="text_team_a">Team A</string>
    <string name="text_score_a">0</string>
    <string name="button_3_points">+ 3 Points</string>
    <string name="button_2_points">+ 2 Points</string>
    <string name="button_free_throw">Free Throw</string>
    <string name="text_team_b">Team B</string>
    <string name="text_score_b">0</string>
    <string name="button_reset">Reset</string>
</resources>